--- a/week-2/index.html
+++ b/week-2/index.html
@@ -6,13 +6,30 @@
 </head>
 <body>
     <!--this is a heading-->
-    <h1>Hello World</h1>
+    <h1>Hello</h1>
+    <h2>Hello</h2>
+    <h3>Hello</h3>
+    <h4>Hello</h4>
+    <h5>Hello</h5>
+    <h6>Hello</h6>
     <!--this is a paragraph-->
     <p>hello i am eating a <strong>pizza</strong></p> 
-    
     <p>I am going to sleep.</p>
     <p>My favorite color is pink.</p>
+    <!--this are list-->
+    <ol>
+      <li>Pizza</li>
+      <li>Apple</li>
+      <li>Burger</li>
+      <li>Water</li>
+    </ol>
+    <ul>
+      <li>Red</li>
+      <li>Blue</li>
+      <li>Green</li>
+    </ul>
+    <!--anchor -->
+    <a href="https://www.google.com/">google</a>
     
-
 </body>
 </html>
