--- a/week-2/index.html
+++ b/week-2/index.html
@@ -30,6 +30,7 @@
     </ul>
     <!--anchor -->
     <a href="https://www.google.com/">google</a>
-    
+    <!--images-->
+    <img src="https://di-uploads-pod18.dealerinspire.com/santamariamazda/uploads/2024/10/rsz_adobestock_64168411.jpg" alt="Car image">
 </body>
 </html>
