made "champ" into "champs"

--- a/week-3/2-2-26.html
+++ b/week-3/2-2-26.html
@@ -30,7 +30,7 @@
   <h2>The Rock</h2>
   <p>A list actor</p>
   <ul>
-    <li>WWE champ</li>
+    <li>WWE champs</li>
     <li>Friends with Kevin Heart</li>
   </ul>
   <img height="120" width="120"
