learned about inline and block

--- a/week-4/index.html
+++ b/week-4/index.html
@@ -1,32 +1,77 @@
 <style>
-h2 {
-  background-color: navy;
-  color: white;
-  padding: 20px;
-  margin: 40px; 
-  border: 10px solid red;
-}
+  h2 {
+    background-color: navy;
+    color: white;
+    padding: 20px;
+    margin: 40px;
+    border: 10px solid red;
+  }
 
-p {
-  background-color: green;
-  color: bisque;
-  padding: 40px;
-  margin: 5px;
-  border: 25px outset black;
-}
+  /* p {
+    background-color: green;
+    color: bisque;
+    padding: 40px;
+    margin: 5px;
+    border: 25px outset black;
+  } */
 
-h6 {
-  background-color: yellow;
-  color: black;
-  padding: 5px;
-  margin: 80px;
-  border: 25px ridge brown
-}
+  h6 {
+    background-color: yellow;
+    color: black;
+    padding: 5px;
+    margin: 80px;
+    border: 25px ridge brown
+  }
 
+  h1 {
+    border: 2px solid black;
+    display: inline;
+  }
+
+  a {
+    border: 2px solid red;
+    display: block;
+  }
+
+  div {
+    border: 5px solid black;
+    background-color: gray;
+    display: inline-block;
+  }
 </style>
 
 <body>
+  <!-- Feb 9 -->
   <h2>Hello there</h2>
   <p>this is just some text</p>
   <h6>this is some more text</h6>
+  <!-- Feb 10 -->
+  <h1>block vs inline</h1>
+  <h1>This is a block</h1>
+  <a>Link</a>
+  <a>This is in the same line</a>
+
+  <div>
+    <p>Sentence One</p>
+    <p>Sentence Two</p>
+  </div>
+
+  <div>
+    <p>Sentence One</p>
+    <p>Sentence Two</p>
+  </div>
+
+  <div>
+    <p>Sentence One</p>
+    <p>Sentence Two</p>
+  </div>
+
+  <div>
+    <p>Sentence One</p>
+    <p>Sentence Two</p>
+  </div>
+
 </body>
+
+
+BREAK TILL 7:10
