--- a/week-3/2-2-26.html
+++ b/week-3/2-2-26.html
@@ -24,16 +24,23 @@
   a {
     color: #EAEAEA;
   }
+
+  ul {
+    border: 1px #EAEAEA solid;
+  }
 </style>
 
 <body>
   <h2>The Rock</h2>
-  <p>A list actor</p>
+  <p>A list actor and very cool guy</p>
   <ul>
     <li>WWE champs</li>
     <li>Friends with Kevin Heart</li>
+    <li>Born on May 2, 1972</li>
   </ul>
   <img height="120" width="120"
     src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Dwayne_Johnson-1809_%28cropped%29.jpg" />
   <br />
+  <a href="https://en.wikipedia.org/wiki/Dwayne_Johnson
+">To Wikipedia</a>
 </body>
